[package]
name = "organpool"
version = "0.2.0"
edition = "2021"
description = "Organ physics substrate — cardiac and respiratory simulation with autonomic modulation, respiratory sinus arrhythmia, integer-only ion channel dynamics, and real-time vital sign diagnostics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Blackfall-Labs/organpool-rs"
keywords = ["neuromorphic", "cardiac", "respiratory", "autonomic", "organ"]
categories = ["science", "simulation"]

[dependencies]
fibertract = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
serde_json = "1.0"

[features]
default = ["serde"]
serde = ["dep:serde"]
fibertract = ["dep:fibertract"]
